BK-67: Remove unused class for binding js to bolt-nav-list

--- a/src/_patterns/02-components/bolt-navbar/src/navbar.twig
+++ b/src/_patterns/02-components/bolt-navbar/src/navbar.twig
@@ -104,7 +104,7 @@
         {% endif %}
         <div class="c-bolt-navbar__nav">
           <bolt-nav-list>
-            <ul class="c-bolt-nav-list {{ "c-bolt-nav-list--#{vspacing}" }} js-bolt-nav-list">
+            <ul class="c-bolt-nav-list {{ "c-bolt-nav-list--#{vspacing}" }}">
               {% for item in links %}
                 <li class="c-bolt-nav-list__item">
                   <bolt-nav-link>
