--- a/src/_patterns/02-components/bolt-navbar/src/navbar.scss
+++ b/src/_patterns/02-components/bolt-navbar/src/navbar.scss
@@ -48,11 +48,11 @@ bolt-navbar {
   @include bolt-margin(0 0 0 small);
 
   // TODO: [Mai] The following is a hack to hide the nav on small screens, there should be a better option to hide and show in the future from the design team.
-  display: none;
+  /*display: none;
 
   @include respond-to(medium) {
     display: block;
-  }
+  }*/
 }
 
 .c-bolt-navbar__title {
@@ -101,15 +101,69 @@ bolt-navlist {
   display: block;
 }
 
-
 .c-bolt-navlist {
   @include bolt-margin(0);
   @include bolt-padding(0);
 
   display: flex;
+  flex-direction: column;
   position: relative;
   list-style: none;
+
+  @include respond-to(medium) {
+    flex-direction: row;
+  }
+
+  // TODO: [Mai] This is the setup for enhanced mobile view instead of hiding the items.
+  // &.is-active {
+  //   position: fixed;
+  //   top: 0;
+  //   left: 0;
+  //   width: 100%;
+  //   height: 100%;
+  //   background-color: var(--bolt-theme-background);
+  //
+  //   @include respond-to(medium) {
+  //     position: relative;
+  //     top: auto;
+  //     left: auto;
+  //     width: auto;
+  //     height: auto;
+  //     background-color: transparent;
+  //   }
+  // }
 }
+
+// TODO: [Mai] This is the setup for enhanced mobile view instead of hiding the items.
+// .c-bolt-navlist__toggle {
+//   display: block;
+//   position: relative;
+//   width: 2rem;
+//   height: 2rem;
+//   content: '';
+//   cursor: pointer;
+//
+//   @include respond-to(medium) {
+//     display: none;
+//   }
+//
+//   &:before {
+//     display: block;
+//     position: absolute;
+//     top: 50%;
+//     left: 50%;
+//     width: 1rem;
+//     height: 1rem;
+//     margin: -0.67rem 0 0 -0.5rem;
+//     content: '';
+//     border-style: solid;
+//     border-color: currentColor;
+//     border-color: var(--bolt-theme-heading, currentColor);
+//     border-width: 2px 2px 0 0;
+//     transform: rotate(135deg);
+//     transform-origin: 50% 50%;
+//   }
+// }
 
 .c-bolt-navlist__indicator {
   position: absolute;
@@ -132,7 +186,7 @@ bolt-navlist {
     bottom: (bolt-v-spacing(medium) * -1); // TODO: [Mai] When the band spacing options are fixed, small should map to small, not medium here.
   }
 
-  // Vertical spacing options for future use.
+  // TODO: [Mai] Vertical spacing options for future use.
   // .c-bolt-navlist--medium &
   //   bottom: (bolt-v-spacing(medium) * -1);
   // }
@@ -145,6 +199,21 @@ bolt-navlist {
   //   bottom: (bolt-v-spacing(xlarge) * -1);
   // }
 }
+
+// TODO: [Mai] This is the setup for enhanced mobile view instead of hiding the items.
+// .c-bolt-navlist__item {
+//   display: none;
+//   width: 100%;
+//
+//   @include respond-to(medium) {
+//     display: block;
+//     width: auto;
+//   }
+//
+//   .c-bolt-navlist.is-active & {
+//     display: block;
+//   }
+// }
 
 .c-bolt-navlist__item-link {
   @include bolt-padding(small, squished);
@@ -218,20 +287,4 @@ bolt-navlist {
   to {
     transform: scale3d(1, 1, 1);
   }
-}
-
-
-
-
-/* ------------------------------------ *\
-   Sticky
-\* ------------------------------------ */
-
-
-.c-bolt-sticky {
-  display: block;
-  position: sticky;
-  top: 0;
-  width: 100%;
-  z-index: 99999; // TODO: [Mai] We need z-index management.
 }
