--- a/src/_patterns/02-components/components.scss
+++ b/src/_patterns/02-components/components.scss
@@ -11,6 +11,7 @@
 @import '@bolt/components-chip';
 @import '@bolt/components-background';
 @import '@bolt/components-color-swatch';
+@import '@bolt/components-device-viewer';
 @import '@bolt/components-headline';
 @import '@bolt/components-image';
 @import '@bolt/components-icon';
