--- a/src/_patterns/01-core/06-themes/themes-all/_themes.all.scss
+++ b/src/_patterns/01-core/06-themes/themes-all/_themes.all.scss
@@ -4,6 +4,7 @@
 
 @import '@bolt/themes-xdark';
 @import '@bolt/themes-dark';
+@import '@bolt/themes-medium';
 @import '@bolt/themes-light';
 @import '@bolt/themes-xlight';
 
