--- a/src/_patterns/02-components/bolt-band/src/band.twig
+++ b/src/_patterns/02-components/bolt-band/src/band.twig
@@ -1,19 +1,14 @@
-{% set prefix = "c-bolt-" %}
-{% set tags = ["div", "article", "section", "header", "footer", "nav", "figure"] %} {# Available overall container tags #}
-{% set contentTags = ["div", "article", "section", "header", "footer", "nav", "figcaption"] %} {# Available content container tags #}
+{% set tags = ["div", "article", "section", "heading", "footer", "nav", "figure"] %} {# Available overall container tags #}
+{% set contentTags = ["div", "article", "section", "heading", "footer", "nav", "figcaption"] %} {# Available content container tags #}
 {% set fullBleed = [true, false] %}
+{% set themes = ["dark", "xlight", "light", "dark", "xdark"] %}
+{% set prefix = "c-bolt-" %}
+
+{# Allowed Band Sizes #}
 {% set sizes = [
-  "xsmall",
   "small",
   "medium",
   "large"
-] %}
-{% set themes = [
-  "xlight",
-  "light",
-  "medium",
-  "dark",
-  "xdark"
 ] %}
 
 {% set attributes = create_attribute(attributes|default({})) %}
@@ -21,11 +16,11 @@
 {# Defaults for a vanilla `Band` component #}
 {% set componentName = "band" %}
 {% set baseClass = prefix ~ componentName %}
+{% set size = size | default("medium") %}
+{% set fullBleed = fullBleed | default(false) %}
+{% set theme = theme | default("dark") %}
 {% set tag = tag in tags ? tag: "div" %}
 {% set contentTag = contentTag in contentTags ? contentTag: "div" %}
-{% set fullBleed = fullBleed | default(false) %}
-{% set size = size | default("medium") %}
-{% set theme = theme | default("dark") %}
 
 {% set classes = [
   baseClass,
@@ -34,7 +29,7 @@
   theme in themes ? "t-bolt-" ~ theme : ""
 ] %}
 
-<bolt-{{ componentName }}
+<bolt-band
   size="{{ size }}"
   theme="{{ theme }}"
   bolt-component>
@@ -57,4 +52,4 @@
       content: renderedBandContent
     } only %}
   </{{ tag }}>
-</bolt-{{ componentName }}>
+</bolt-band>
