feat: update button component to have standalone CSS output

--- a/src/_patterns/02-components/bolt-button/src/button.scss
+++ b/src/_patterns/02-components/bolt-button/src/button.scss
@@ -1,12 +1,10 @@
 /* ------------------------------------ *\
    Buttons
 \* ------------------------------------ */
-// @import '@bolt/settings-global';
-// @import '@bolt/tools-button-color';
-// @import '@bolt/tools-font-size';
-// @import '@bolt/tools-font-weight';
-// @import '@bolt/tools-spacing';
-// @import '@bolt/tools-no-select';
+$bolt-export-data: false !global;
+
+@import '@bolt/settings-all';
+@import '@bolt/tools-all';
 
 
 $bolt-color-button-text: bolt-color(white);
