--- a/src/_patterns/02-components/components.scss
+++ b/src/_patterns/02-components/components.scss
@@ -12,6 +12,7 @@
 @import '@bolt/components-background';
 @import '@bolt/components-color-swatch';
 @import '@bolt/components-device-viewer';
+@import '@bolt/components-video';
 @import '@bolt/components-headline';
 @import '@bolt/components-image';
 @import '@bolt/components-icon';
