--- a/src/_patterns/04-pages/d8-product/d8-product.twig
+++ b/src/_patterns/04-pages/d8-product/d8-product.twig
@@ -5,7 +5,7 @@
 
 <div class="c-bolt-sticky">
   {% include "@bolt/navbar.twig" with {
-    "theme": "dark",
+    "theme": "medium",
     "gradient": true,
     "vspacing": "xsmall",
     "title":
