--- a/src/_patterns/04-pages/d8-product-landing/d8-product-t2.twig
+++ b/src/_patterns/04-pages/d8-product-landing/d8-product-t2.twig
@@ -197,10 +197,11 @@
     {% grid "o-bolt-grid--flex o-bolt-grid--large o-bolt-grid--middle o-bolt-grid--matrix" %}
 
       {% cell "u-bolt-width-1/1 u-bolt-width-5/12@small" %}
-        {% include "@bolt/subheadline.twig" with {
+        {% include "@bolt/headline.twig" with {
           text: "Maximize Value with <strong>Next&nbsp;Best Action Intelligence</strong>",
+          weight: "regular",
           size: "xxlarge",
-          tag: "span"
+          tag: "h2"
         } only %}
        
         {% include "@bolt/text.twig" with {
