--- a/src/_patterns/02-components/bolt-nav-bar/demo/theming/nav-bar--theme-demo.twig
+++ b/src/_patterns/02-components/bolt-nav-bar/demo/theming/nav-bar--theme-demo.twig
@@ -1,6 +1,6 @@
 {% extends "@bolt/theme-demo.twig" %}
 {% block demo_content %}
-  {% include "@bolt/navbar.twig" with {
+  {% include "@bolt/nav-bar.twig" with {
     "theme": false,
     "gradient": false,
     "title":
