--- a/src/_patterns/02-components/bolt-nav-bar/src/nav-bar.twig
+++ b/src/_patterns/02-components/bolt-nav-bar/src/nav-bar.twig
@@ -1,15 +1,15 @@
 {# Sample Usage
-  {% include "@bolt/navbar.twig" with {
+  {% include "@bolt/nav-bar.twig" with {
     // Default is dark. Can be set to false for a transparent background. [xlight, light, dark, xdark, false]
     "theme": "dark",
 
     // Default is true. This sets a gradient on the background. [true, false]
     "gradient": true,
 
-    // Default is xsmall. This controls the top and bottom spacing of the navbar. [xsmall, small]
+    // Default is xsmall. This controls the top and bottom spacing of the nav-bar. [xsmall, small]
     "vspacing": "xsmall",
 
-    // Navbar title. Icon is optional. Tag can be set to h1 to h6 depending on the page.
+    // Nav-bar title. Icon is optional. Tag can be set to h1 to h6 depending on the page.
     "title":
     {
       "tag": "h2",
@@ -20,7 +20,7 @@
       }
     },
 
-    // Navbar links. It's recommended to have no more than 4 links.
+    // Nav-bar links. It's recommended to have no more than 4 links.
     "links":
     [
       {
@@ -56,7 +56,7 @@
 ] %}
 
 
-{% set componentName = "navbar" %}
+{% set componentName = "nav-bar" %}
 {% set baseClass = prefix ~ componentName %}
 
 
@@ -92,16 +92,16 @@
     {% endblock band_background %}
 
     {% block band_content %}
-      <nav class="c-bolt-navbar">
+      <nav class="c-bolt-nav-bar">
         {% if title %}
-          <div class="c-bolt-navbar__title">
-            <div class="c-bolt-navbar__title-item">
+          <div class="c-bolt-nav-bar__title">
+            <div class="c-bolt-nav-bar__title-item">
               {% include "@bolt/icon.twig" with {
                 "name": title.icon.name,
                 "size": "large"
               } only %}
             </div>
-            <div class="c-bolt-navbar__title-item">
+            <div class="c-bolt-nav-bar__title-item">
               {% include "@bolt/text.twig" with {
                 "size": "large",
                 "weight": "semibold",
@@ -111,14 +111,14 @@
             </div>
           </div>
         {% endif %}
-        <div class="c-bolt-navbar__nav">
+        <div class="c-bolt-nav-bar__nav">
           <bolt-nav-list>
             <ul class="c-bolt-nav-list {{ "c-bolt-nav-list--#{vspacing}" }}">
               {% for item in links %}
                 <li class="c-bolt-nav-list__item">
                   <bolt-nav-link>
                     {% set itemAttributes = create_attribute(item.attributes | default({})) %}
-                    {% set itemAttributes = itemAttributes.addClass("c-bolt-nav-list__item-link").setAttribute("href", item.url) %}
+                    {% set itemAttributes = itemAttributes.addClass("c-bolt-nav-link").setAttribute("href", item.url) %}
                     <a {{ itemAttributes }}>
                       {{ item.text }}
                     </a>
