--- a/src/_patterns/02-components/components.scss
+++ b/src/_patterns/02-components/components.scss
@@ -20,7 +20,7 @@
 @import '@bolt/components-site';
 @import '@bolt/components-ordered-list';
 @import '@bolt/components-unordered-list';
-@import '@bolt/components-navbar';
+@import '@bolt/components-nav-bar';
 @import '@bolt/components-teaser'; // tiny amount of styling
 // @import '@bolt/components-chip-list'; // No styles
 // @import '@bolt/components-critical-path'; // No styles
