--- a/src/_patterns/02-components/bolt-headline/src/all-headlines.scss
+++ b/src/_patterns/02-components/bolt-headline/src/all-headlines.scss
@@ -26,8 +26,8 @@ $bolt-headline--plus-letter-spacing: 0.05rem;
   @include bolt-font-family(heading);
   display: block;
   max-width: 55ch;
-  color: currentColor;
-  color: var(--bolt-theme-heading, currentColor);
+  color: inherit;
+  color: var(--bolt-theme-heading, inherit);
 
   @supports (display: flex) {
     display: flex;
@@ -46,7 +46,7 @@ $bolt-headline--plus-letter-spacing: 0.05rem;
 .c-bolt-headline {
   @include bolt-headline;
   @include bolt-font-weight(bold);
-  
+
 
   &:not(:last-child) {
     @include bolt-margin-bottom(medium);
@@ -114,7 +114,7 @@ $bolt-headline--plus-letter-spacing: 0.05rem;
   border-width: 0;
   border-style: none;
   /* stylelint-disable-next-line scale-unlimited/declaration-strict-value */
-  background-color: currentColor;
+  background-color: inherit;
   opacity: 0.2;
 
   &:first-child {
