chore: merging updated packages + fixing navbar twig include

--- a/src/_patterns/04-pages/d8-product/d8-product.twig
+++ b/src/_patterns/04-pages/d8-product/d8-product.twig
@@ -215,14 +215,14 @@
 {% endembed %}
 
 <div class="c-bolt-sticky">
-  {% include "@bolt/navbar.twig" with {
+  {% include "@bolt/nav-bar.twig" with {
     "theme": "light",
     "gradient": false,
     "vspacing": "xsmall",
     "title":
     {
       "tag": "h2",
-      "text": "2nd Sticky Navbar",
+      "text": "2nd Sticky Nav Bar",
       "icon":
       {
         "name": "cloud"
