fix: copy over the latest nav-bar code

--- a/src/_patterns/02-components/bolt-band/src/band.scss
+++ b/src/_patterns/02-components/bolt-band/src/band.scss
@@ -35,6 +35,11 @@
   @include bolt-padding-bottom(medium);
 }
 
+.c-bolt-band--xsmall {
+  @include bolt-padding-top(xsmall);
+  @include bolt-padding-bottom(xsmall);
+}
+
 .c-bolt-band--full {
   @include bolt-full-bleed;
 }
