--- a/src/_patterns/02-components/components.scss
+++ b/src/_patterns/02-components/components.scss
@@ -22,6 +22,7 @@
 @import '@bolt/components-ordered-list';
 @import '@bolt/components-unordered-list';
 @import '@bolt/components-sticky';
+@import '@bolt/components-nav-bar';
 @import '@bolt/components-teaser'; // tiny amount of styling
 // @import '@bolt/components-chip-list'; // No styles
 // @import '@bolt/components-critical-path'; // No styles
