--- a/src/_patterns/02-components/brightcove-video/src/brightcove-video.twig
+++ b/src/_patterns/02-components/brightcove-video/src/brightcove-video.twig
@@ -1,1 +1,1 @@
-<brightcove-player video-id="5609376179001" account-id="1900410236" player-id="r1CAdLzTW"></brightcove-player>
+<brightcove-player video-id="5609376179001" account-id="1900410236" player-id="r1CAdLzTW" class="js-brightcove-player-1"></brightcove-player>
