WIP: stashing latest

--- a/src/_patterns/01-core/05-objects/bolt-ratio-object/src/ratio.twig
+++ b/src/_patterns/01-core/05-objects/bolt-ratio-object/src/ratio.twig
@@ -3,12 +3,24 @@
 ] %}
 
 {% set attributes = create_attribute(attributes | default({})) %}
-{% set attributes = attributes.addClass(classes) %}
 
-<bolt-ratio>
-  <div {{ attributes }}>
+
+{% if aspectRatioHeight and aspectRatioWidth %}
+  {% set attributes = attributes.addClass(classes) %}
+  {% set attributes = attributes.setAttribute("aspect-ratio-height", aspectRatioHeight) %}
+  {% set attributes = attributes.setAttribute("aspect-ratio-width", aspectRatioWidth) %}
+
+  {# pre-render custom property values before the JS kicks in #}
+  {% set attributes = attributes.setAttribute("style", [
+    "--aspect-ratio-height: " ~ aspectRatioHeight ~ ";",
+    "--aspect-ratio-width: " ~ aspectRatioWidth ~ ";"
+  ]) %}
+{% endif %}
+
+<bolt-ratio {{ attributes }}>
+  {# <div class="o-bolt-ratio__content"> #}
     {% block ratio_content %}
       {{ children }}
     {% endblock %}
-  </div>
+  {# </div> #}
 </bolt-ratio>
