--- a/src/_patterns/02-components/brightcove-player/src/brightcove-player.scss
+++ b/src/_patterns/02-components/brightcove-player/src/brightcove-player.scss
@@ -1,3 +1,21 @@
+brightcove-player {
+  display: block;
+  width: 100%;
+  // position: relative;
+  // height: 0;
+  // --aspect-ratio-height: 16;
+  // --aspect-ratio-width: 9;
+  // padding-top: calc( var(--aspect-ratio-height, 1) / var(--aspect-ratio-width, 1) * 100%);
+}
+
+.video-js {
+  // @supports (--custom:property) {
+  //   padding-top: calc( var(--aspect-ratio-height, 1) / var(--aspect-ratio-width, 1) * 100%);
+  // }
+  min-height: 100%;
+  min-width: 100%;
+}
+
 // .c-bolt-background-video {
 //   pointer-events: none;
 
