--- a/src/_patterns/02-components/components.scss
+++ b/src/_patterns/02-components/components.scss
@@ -6,13 +6,14 @@
 @import '@bolt/components-band';
 @import '@bolt/components-button';
 @import '@bolt/components-button-group';
+@import '@bolt/components-brightcove-player';
 @import '@bolt/components-blockquote';
 @import '@bolt/components-card';
 @import '@bolt/components-chip';
 @import '@bolt/components-background';
 @import '@bolt/components-color-swatch';
 @import '@bolt/components-device-viewer';
-@import '@bolt/components-video';
+// @import '@bolt/components-video';
 @import '@bolt/components-headline';
 @import '@bolt/components-image';
 @import '@bolt/components-icon';
