--- a/src/_patterns/01-core/05-objects/bolt-ratio-object/src/ratio.scss
+++ b/src/_patterns/01-core/05-objects/bolt-ratio-object/src/ratio.scss
@@ -5,96 +5,67 @@
 /* ==========================================================================
    #BOLT RATIO OBJECT
    ========================================================================== */
-bolt-ratio {
-  display: inline;
-}
+// bolt-ratio {
+//   display: inline;
+// }
 
-.o-bolt-ratio {
-  /* aspect-ratio custom properties */
-  // /* The width portion of the aspect ratio, e.g. 16 in 16:9. */
-  // --aspect-ratio-w: 1;
-  // /* The height portion of the aspect ratio, e.g. 9 in 16:9. */
-  // --aspect-ratio-h: 1;
+// :host {
+//   display: inline-block;
+//   overflow: hidden;
+// }
+
+
+bolt-ratio,
+:host {
+  --aspect-ratio-width: 1;
+  --aspect-ratio-height: 1;
   position: relative;
-  overflow: hidden; //So blurred inner content, etc. don't leak out
-  height: 0; //since padding-top is setting the entire container size
-}
+  display: inline-block;
+  width: 100%;
 
-// If the user supports custom props, enhance with the intrinsic ratio of the media before it loads.
-// @supports (--custom-props: 'true') {
-.o-bolt-ratio {
+  @supports (--custom:property) {
+    padding-top: calc( var(--aspect-ratio-height, 1) / var(--aspect-ratio-width, 1) * 100%);
+  }
+
   > * {
     position: absolute;
     top: 0;
-    right: 0;
-    bottom: 0;
     left: 0;
     width: 100%;
     height: 100%;
     min-width: 100%; // workaround for content w/ hard-coded height & width 
     min-height: 100%; // workaround for content w/ hard-coded height & width
   }
-
-  // &:before {
-  //   display: block;
-  //   padding-top: calc( var(--aspect-ratio-h, 1) / var(--aspect-ratio-w, 1) * 100%);
-  //   content: '';
-  // }
 }
+
+// @mixin bolt-aspect-ratio($width, $height) {
+//   padding-bottom: ($height / $width) * 100%;
 // }
 
-// .o-bolt-ratio {
-//   display: block; //In case it's applied to a non-block element.
-//   position: relative;
-//   width: 100%;
-//   overflow: hidden;
-
-//   &:after {
-//     content: '';
-//     display: block;
-//     width: 100%;
-//     height: 0;
-//   }
+// .o-bolt-ratio--16x9:after {
+//   @include bolt-aspect-ratio(16,9);
 // }
 
-
-// .o-bolt-ratio__item {
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 100%;
+// .o-bolt-ratio--2x1:after {
+//   @include bolt-aspect-ratio(16,8);
 // }
 
+// .o-bolt-ratio--16x7:after {
+//   @include bolt-aspect-ratio(16,7);
+// }
 
-@mixin bolt-aspect-ratio($width, $height) {
-  padding-bottom: ($height / $width) * 100%;
-}
+// .o-bolt-ratio--20x9:after {
+//   @include bolt-aspect-ratio(20,9);
+// }
 
-.o-bolt-ratio--16x9:after {
-  @include bolt-aspect-ratio(16,9);
-}
+// .o-bolt-ratio--1x1:after {
+//   @include bolt-aspect-ratio(1,1);
+// }
 
-.o-bolt-ratio--2x1:after {
-  @include bolt-aspect-ratio(16,8);
-}
+// .o-bolt-ratio--3x4:after {
+//   @include bolt-aspect-ratio(3,4);
+// }
 
-.o-bolt-ratio--16x7:after {
-  @include bolt-aspect-ratio(16,7);
-}
-
-.o-bolt-ratio--20x9:after {
-  @include bolt-aspect-ratio(20,9);
-}
-
-.o-bolt-ratio--1x1:after {
-  @include bolt-aspect-ratio(1,1);
-}
-
-.o-bolt-ratio--3x4:after {
-  @include bolt-aspect-ratio(3,4);
-}
-
-.o-bolt-ratio--4x3:after {
-  @include bolt-aspect-ratio(4,3);
-}
+// .o-bolt-ratio--4x3:after {
+//   @include bolt-aspect-ratio(4,3);
+// }
