--- a/src/_patterns/02-components/bolt-video/src/video.twig
+++ b/src/_patterns/02-components/bolt-video/src/video.twig
@@ -15,6 +15,23 @@
 ] %}
 
 
+<div>
+
+  {% embed "@bolt/ratio.twig" with {
+    aspectRatioHeight: 9,
+    aspectRatioWidth: 16
+  } %}
+    {% block ratio_content %}
+      <brightcove-player video-id="5609376179001" account-id="1900410236" player-id="r1CAdLzTW" class="js-brightcove-player-1"></brightcove-player>
+    {% endblock %}
+  {% endembed %}
+
+  <bolt-button on-click="toggle" on-click-target="js-brightcove-player-1">
+    Toggle Video
+  </bolt-button>
+
+</div>
+{# 
 <bolt-{{ componentName }} bolt-component>
   <div {{ attributes.addClass(classes) }}>
     <div class="c-bolt-video__video-wrapper">
@@ -34,4 +51,4 @@
       </div>
     </div>
   </div>
-</bolt-{{ componentName }}>
+</bolt-{{ componentName }}> #}
