--- a/src/_patterns/02-components/brightcove-player/src/brightcove-player.twig
+++ b/src/_patterns/02-components/brightcove-player/src/brightcove-player.twig
@@ -1,1 +1,15 @@
-<brightcove-player video-id="5609376179001" account-id="1900410236" player-id="r1CAdLzTW" class="js-brightcove-player-1"></brightcove-player>
+{% set attributes = create_attribute(attributes | default({})) %}
+
+{% if videoId %}
+  {% set attributes = attributes.setAttribute("video-id", videoId) %}
+{% endif %}
+
+{% if accountId %}
+  {% set attributes = attributes.setAttribute("account-id", accountId) %}
+{% endif %}
+
+{% if playerId %}
+  {% set attributes = attributes.setAttribute("player-id", playerId) %}
+{% endif %}
+
+<brightcove-player {{ attributes }}></brightcove-player>
