--- a/src/_patterns/02-components/bolt-background/src/background.twig
+++ b/src/_patterns/02-components/bolt-background/src/background.twig
@@ -43,7 +43,9 @@
 
           {% include pattern_template(item.pattern) with item | merge({
             (itemAttributes): {
-              class: ["c-bolt-background__#{item.pattern}"]
+              class: [
+                "c-bolt-background__#{item.pattern}"
+              ]
             },
             ratio: false
           }) only %}
