--- a/src/_patterns/02-components/bolt-button/src/button.twig
+++ b/src/_patterns/02-components/bolt-button/src/button.twig
@@ -1,4 +1,8 @@
-{% set tags = ["button", "a"] %} {# Available Headline Types #}
+{% set tags = {
+  "button": "button",
+  "a": "link"
+} %}
+
 {% set widths = ["full", "full@small"] %}
 {% set styles = ["primary", "secondary", "text"] %}
 {% set prefix = "c-bolt-" %}
@@ -17,6 +21,7 @@
 ] %}
 
 {% set attributes = create_attribute(attributes|default({})) %}
+{% set tagAttributes = create_attribute({}) %}
 
 {# Defaults for a vanilla `Button` component #}
 {% set componentName = "button" %}
@@ -26,7 +31,7 @@
 {% set style = style | default("") %}
 {% set itemAlignment = itemAlignment | default("center") %}
 
-{% set tag = tag in tags ? tag: "a" %}
+{% set tag = tag in tags|keys ? tag: "a" %}
 
 
 {% set classes = [
@@ -38,10 +43,14 @@
   itemAlignment in itemAlignments|keys ? baseClass ~ "--item-align-" ~ itemAlignments[itemAlignment]
 ] %}
 
-
+{% set tagClasses = [
+  tag in tags|keys ? baseClass ~ "__" ~ tags[tag]
+] %}
+{% set tagAttributes = tagAttributes.addClass(tagClasses) %}
 {% if url %}
-  {% set attributes = attributes.setAttribute("href", url) %}
+  {% set tagAttributes = tagAttributes.setAttribute("href", url) %}
 {% endif %}
+
 
 {% if disabled %}
   {% set attributes = attributes.setAttribute("disabled", true) %}
@@ -50,10 +59,8 @@
 
 {# set iconpos = iconpos | default("right") #}
 
-<bolt-button
-  size="{{ size }}"
-  bolt-component>
-  <{{ tag }} {{ attributes.addClass(classes | raw) }}>
+<bolt-button {{ attributes.addClass(classes) }} bolt-component>
+  <{{ tag }} {{ tagAttributes }}>
     <span class="{{ "#{baseClass}__item #{baseClass}__item-text" }}">{{ text }}</span>
 
     {% if icon %}
@@ -61,6 +68,5 @@
         {% include "@bolt/icon.twig" with icon only %}
       </span>
     {% endif %}
-
   </{{ tag }}>
 </bolt-button>
