--- a/src/_patterns/02-components/bolt-video/src/video.twig
+++ b/src/_patterns/02-components/bolt-video/src/video.twig
@@ -1,54 +1,21 @@
-{% set prefix = "c-bolt-" %}
 
-{% set attributes = create_attribute(attributes|default({})) %}
+{% set attributes = attributes | default({}) %}
+
+{% if videoAttributes %}
+  {% set attributes = videoAttributes | merge(attributes) %}
+
+  {% for key, value in videoAttributes %}
+    {% if attributes[key] %}
+      {% set oldValue = attributes[key] %}
+      {% set newValue = attributes[key] | merge(videoAttributes[key]) %}
+
+      {% set attributes = attributes|merge({
+        (key):newValue
+      }) %}
+    {% endif %}
+
+  {% endfor %}
+{% endif %}
 
 
-{% set componentName = "video" %}
-{% set baseClass = prefix ~ componentName %}
-
-{% set collapsed = collapsed | default(true) %}
-
-
-{% set classes = [
-  baseClass,
-  collapsed is not null and collapsed == false ? "is-expanded" : "is-collapsed"
-] %}
-
-
-<div>
-
-  {% embed "@bolt/ratio.twig" with {
-    aspectRatioHeight: 9,
-    aspectRatioWidth: 16
-  } %}
-    {% block ratio_content %}
-      <brightcove-player video-id="5609376179001" account-id="1900410236" player-id="r1CAdLzTW" class="js-brightcove-player-1"></brightcove-player>
-    {% endblock %}
-  {% endembed %}
-
-  <bolt-button on-click="toggle" on-click-target="js-brightcove-player-1">
-    Toggle Video
-  </bolt-button>
-
-</div>
-{# 
-<bolt-{{ componentName }} bolt-component>
-  <div {{ attributes.addClass(classes) }}>
-    <div class="c-bolt-video__video-wrapper">
-      <video class="c-bolt-video__video-element" width="100%" controls>
-        <source src="https://stripe-images.s3.amazonaws.com/videos/stripe-radar-teespring.mp4" type="video/mp4">
-        <source src="https://stripe-images.s3.amazonaws.com/videos/stripe-radar-teespring.ogv" type="video/ogv">
-      </video>
-
-      <div class="c-bolt-video__button">
-        {% include "@bolt/button.twig" with {
-          icon: {
-            name: "play",
-            size: "xlarge",
-            background: "circle"
-          },
-        } only %}
-      </div>
-    </div>
-  </div>
-</bolt-{{ componentName }}> #}
+{% extends "@bolt/brightcove-player.twig" %}
