feat: working expand functionality w/ background videos, decoupled from bands and band collections. lots and lots of cleanup left but at least this gets us half-way there.

--- a/src/_patterns/02-components/brightcove-player/src/brightcove-player.twig
+++ b/src/_patterns/02-components/brightcove-player/src/brightcove-player.twig
@@ -12,4 +12,10 @@
   {% set attributes = attributes.setAttribute("player-id", playerId) %}
 {% endif %}
 
-<brightcove-player {{ attributes }}></brightcove-player>
+{% if isBackgroundVideo %}
+  {% set attributes = attributes.setAttribute("is-background-video", isBackgroundVideo) %}
+{% else %}
+  {% set attributes = attributes.setAttribute("is-background-video", false) %}
+{% endif %}
+
+<brightcove-player {{ attributes }} max-height="1200"></brightcove-player>
