feat: working expand functionality w/ background videos, decoupled from bands and band collections. lots and lots of cleanup left but at least this gets us half-way there.

--- a/src/_patterns/02-components/bolt-background/src/background.scss
+++ b/src/_patterns/02-components/bolt-background/src/background.scss
@@ -70,6 +70,15 @@ $bolt-background-dark-overlay-opacity--heavy: 0.8;
   z-index: 10;
   pointer-events: none;
   opacity: 0;
+  transition: all .5s ease;
+  
+  &.is-playing,
+  &.is-paused,
+  &.is-finished {
+    opacity: 1;
+    pointer-events: auto;
+  }
+
 
   .video-js {
     max-width: 1400px;
