--- a/src/_patterns/02-components/bolt-band/demo/band--video-background.twig
+++ b/src/_patterns/02-components/bolt-band/demo/band--video-background.twig
@@ -1,4 +1,4 @@
-{% embed "@bolt/band--collection.twig" with {
+{% embed "@bolt/band.twig" with {
   theme: "dark",
   size: "medium",
   background: {
@@ -15,6 +15,7 @@
       },
       {
         "pattern": "video",
+        "isBackgroundVideo": true,
         "videoId": "5609376179001",
         "accountId": "1900410236",
         "playerId": "r1CAdLzTW",
