--- a/src/_patterns/02-components/bolt-site/_components.site.scss
+++ b/src/_patterns/02-components/bolt-site/_components.site.scss
@@ -55,7 +55,10 @@
   align-items: center;
 
   > * {
+    display: block;
     flex-basis: auto;
+    flex-grow: 1; // How we make sure children don't report 0px widths
+    width: 100%;
     -ms-flex-preferred-size: auto;
     
     @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
