--- a/src/_patterns/02-components/bolt-video/src/video-background.twig
+++ b/src/_patterns/02-components/bolt-video/src/video-background.twig
@@ -7,6 +7,7 @@
   },
   {
     "pattern": "video",
+    "isBackgroundVideo": true,
     "videoId": "5609376179001",
     "accountId": "1900410236",
     "playerId": "r1CAdLzTW"
