--- a/src/_patterns/03-templates/default/default-template.twig
+++ b/src/_patterns/03-templates/default/default-template.twig
@@ -6,9 +6,11 @@
   <div class="o-bolt-wrapper">
     <main>
       <article>
-        {% block main_content %}
-          <!-- <p>Example main content block.</p> -->
-        {% endblock %}
+        <bolt-band-collection>
+          {% block main_content %}
+            <!-- <p>Example main content block.</p> -->
+          {% endblock %}
+        </bolt-band-collection>
       </article>
     </main>
   </div>
