feat: working expand functionality w/ background videos, decoupled from bands and band collections. lots and lots of cleanup left but at least this gets us half-way there.

--- a/src/_patterns/02-components/bolt-band/src/band.scss
+++ b/src/_patterns/02-components/bolt-band/src/band.scss
@@ -43,3 +43,20 @@
 .c-bolt-band--full {
   @include bolt-full-bleed;
 }
+
+
+bolt-band {
+  display: block;
+  display: flex; // So children increase in height
+  width: 100%;
+  transition: all 0.5s ease-in-out;
+  max-height: none;
+
+  &.is-expanded {
+    height: 56.25vw;
+  }
+
+  &.is-animating {
+    transition: transform 0.5s ease-in-out;
+  }
+}
