--- a/src/_patterns/02-components/05-bolt-background-shapes/src/background-shapes.twig
+++ b/src/_patterns/02-components/05-bolt-background-shapes/src/background-shapes.twig
@@ -6,63 +6,10 @@
   baseClass
 ] %}
 
-{% set shapeGroups = {
-  "A": [
-    {
-      "shape": "big-circle",
-      "color": "teal"
-    },
-    {
-      "shape": "little-circle",
-      "color": "orange"
-    },
-    {
-      "shape": "big-square",
-      "color": "yellow"
-    },
-    {
-      "shape": "outline-circle",
-      "color": "yellow"
-    },
-    {
-      "shape": "big-circle",
-      "color": "orange"
-    },
-    {
-      "shape": "little-square",
-      "color": "teal"
-    }
-  ],
-  "B": [
-    {
-      "shape": "little-circle",
-      "color": "teal"
-    },
-    {
-      "shape": "big-square",
-      "color": "yellow"
-    },
-    {
-      "shape": "little-circle",
-      "color": "teal"
-    },
-    {
-      "shape": "outline-circle",
-      "color": "orange"
-    },
-    {
-      "shape": "little-square",
-      "color": "yellow"
-    },
-    {
-      "shape": "big-circle",
-      "color": "teal"
-    }
-  ]
-} %}
+{% set shapeGroups = source("shape-groups.json") | json_decode %}
 
 {# If a valid shapeGroup was specified, select its shapes.  Otherwise, get the shapes from the default shapeGroup. #}
-{% set elements = attribute(shapeGroups, shapeGroup) ? attribute(shapeGroups, shapeGroup) : shapeGroup.A %}
+{% set elements = attribute(shapeGroups, shapeGroup) ? attribute(shapeGroups, shapeGroup) : shapeGroups.A %}
 
 <bolt-{{ componentName }} bolt-component>
 
