BK-26: Add 'only' option when passing values to included twig

--- a/src/_patterns/02-components/bolt-background/src/background.twig
+++ b/src/_patterns/02-components/bolt-background/src/background.twig
@@ -68,10 +68,9 @@
 
       {% if shapeGroup %}
         <div {{ shapeAttributes.addClass(shapeClasses) }}>
-          {% include "@bolt/background-shapes.twig" with {
-            "shapeGroup": shapeGroup
-          }%}
+          {% include "@bolt/background-shapes.twig" with { "shapeGroup": shapeGroup } only %}
         </div>
+
       {% endif %}
     </div>
   </div>
