BK-26: Use bolt grid for background shapes

--- a/src/_patterns/02-components/05-bolt-background-shapes/src/background-shapes.scss
+++ b/src/_patterns/02-components/05-bolt-background-shapes/src/background-shapes.scss
@@ -11,16 +11,9 @@
     width: 900px;
   }
 
-  &__svg {
-    fill: bolt-color(gray);
-  }
-
   &__shape {
-    float: left;
-    width: 33.3%;
-
-    &:nth-child(3n+1) {
-      clear: left;
+    .c-bolt-background-shapes__svg {
+      fill: bolt-color(gray);
     }
 
     &--orange {
