--- a/src/_patterns/02-components/05-bolt-background-shapes/src/background-shapes.twig
+++ b/src/_patterns/02-components/05-bolt-background-shapes/src/background-shapes.twig
@@ -15,11 +15,15 @@
 
   <div class="{{ "#{baseClass}" }}">
     <div class="{{ "#{baseClass}__shapes" }}">
-      {% for element in  elements %}
-        <div class="{{ "#{baseClass}__shape #{baseClass}__shape--#{element.color}" }}">
-          {{ source(element.shape ~ '.svg') }}
-        </div>
-      {% endfor %}
+      {% grid "o-bolt-grid--center" %}
+        {% for element in  elements %}
+          {% cell "u-bolt-width-1/3" %}
+            <div class="{{ "#{baseClass}__shape #{baseClass}__shape--#{element.color}" }}">
+              {{ source(element.shape ~ '.svg') }}
+            </div>
+          {% endcell %}
+        {% endfor %}
+      {% endgrid %}
     </div>
   </div>
 </bolt-{{ componentName }}>
